# playlist-sync

./: README.md  main.py  playlist.yaml  pyproject.toml
.github/workflows/: sync_playlist.yml
