[tool.poetry]
name = "playlist-sync"
version = "0.1.0"
description = ""
authors = ["Pavel Kirillov <levru333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.23.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
